--- a/config/sites.yaml
+++ b/config/sites.yaml
@@ -1,21 +1,23 @@
 parionsport:
-  url_home_page: https://www.enligne.parionssport.fdj.fr
+  home_page: https://www.enligne.parionssport.fdj.fr
+  absolute_url: False
   tags_chamionship:
     sport: //li[@class="psel-quicknav__item"]
     sport_name: //span[@pselautotestid="quick_nav_ept_sport_lbl"]/text()
-      country_name: //span[@pselautotestid="quick_nav_ept_category_lbl"]
-        link_championship: //a[@pseltcclick="quickaccess_eptCompetition"]//@href
-        championship_name: //a[@pseltcclick="quickaccess_eptCompetition"]//text()
-  button_tag:
-    bet_type: //button[@class="psel-filters__label" and contains(., "1 N 2") and not(contains(., "Handicap"))]
+    country_name: .//span[@pselautotestid="quick_nav_ept_category_lbl"]//text()
+    link_championship: .//a[@pseltcclick="quickaccess_eptCompetition"]//@href
+    championship_name: .//a[@pseltcclick="quickaccess_eptCompetition"]//text()
+  tags_button:
+    bet_filter: .//button[@class="psel-filters__label" and contains(., "1 N 2") and not(contains(., "Handicap"))]
+    cookies: .//button[@id="popin_tc_privacy_button_2"]
   tags_odd : 
-    bloc_match: //psel-event-main
-      date_hours: //time[@class="psel-timer"]/text() 
-        bloc_odd: //psel-templates
-          bloc_name_team_and_odd:
-            name_team : //p[@class="psel-market__label"]
-            odd : //span[@class="psel-outcome__data"]/text()
-            match: //div[@class="psel-market__col"]/text()
+    bloc_match: .//psel-event-main//text()
+    date_hours: .//time[@class="psel-timer"]/text() 
+    bloc_odd: .//psel-templates
+    bloc_name_team_and_odd:
+    name_team : .//p[@class="psel-market__label"]/text()
+    odd : .//span[@class="psel-outcome__data"]/text()
+    match: .//div[@class="psel-market__col"]/text()
 
 
 
