--- a/config/sites.yaml
+++ b/config/sites.yaml
@@ -16,7 +16,7 @@ parionsport:
     bloc_match: //psel-event-main
     date_hours: .//time[@class="psel-timer"]/text() 
     bloc_odd: .//psel-templates
-    name_team: .//p[@class="psel-market__label ng-star-inserted"]/text()
+    name_team: .//p[@class="psel-market__label"]//text() #.//p[@class="psel-market__label ng-star-inserted"]/text()
     odd:  .//span[@class="psel-outcome__data"]/text()
   data-odd-type:
     - Win
@@ -27,9 +27,10 @@ betclic :
   home_page : https://www.betclic.fr/
   absolute_url : False
   tags_chamionship :
-    sport:  //a[@class="sportList_itemWrapper" and @id="block-link-null"]/div[@class="sportlist_name"]
+    sport:  //sports-tile[@routerlinkactive="active-link" and  contains(@class,"sportList_item ")] #//a[@class="sportList_itemWrapper" and @id="block-link-null"] #//a[@class="sportList_itemWrapper" and @id="block-link-null"]/div[@class="sportlist_name"]
     sport_name:  //a[@class="sportList_itemWrapper" and @id="block-link-null"]/div[@class="sportlist_name"]/text()
-    country_name:  //div[@class="sportList_itemWrapper"]/div[@class="sportlist_name"] | //a[@class="sportList_itemWrapper ng-star-inserted"]
+    country_name:  //div[@class="sportList_itemWrapper"]/div[@class="sportlist_name"]/text() 
+    country : .//ul//li[@routerlinkactive="active-link"] #.//li[@routerlinkactive="active-link" and @class="sportList_item has-children ng-star-inserted"]
     championship :  //ul[@class="sportList_listLv2 ng-star-inserted"]//div[@class="sportlist_name"]
     championship_name :   //ul[@class="sportList_listLv2 ng-star-inserted"]//div[@class="sportlist_name"]/text()
   tags_button:
@@ -38,10 +39,10 @@ betclic :
   tags_odd:
     date : //h2[@class="groupEvents_headTitle"]/text()
     bloc_match: //sports-events-event[@class="groupEvents_card ng-star-inserted"] 
-    date_hours: //div[contains(@class,"scoreboard_hour ")] 
+    date_hours: .//div[@class="event_infoTime ng-star-inserted"]/text() 
     bloc_odd: //div[@class="market_odds ng-star-inserted"]
     name_team:  //div[contains(@class,"scoreboard_contestantLabel ")]/text()
-    odd:  .//span[@class="psel-outcome__data"]/text()
+    odd:  .//span[contains(@class,"oddValue")]/text()
     match: 
   data-odd-type:
     - Win
